# SpeculAI

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  speculai-prd.md
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_remove_backtest_columns.py
config/: config.example.yaml
frontend/: index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: ActionBadge.tsx  ConfidenceBar.tsx  FilterBar.tsx  MemoryReferencesPanel.tsx  NewsContextPanel.tsx  Pagination.tsx  PerformanceChart.tsx  PortfolioSummaryCard.tsx  PositionsTable.tsx  Sidebar.tsx  (+1 more)
scripts/: seed_benchmarks.py  seed_watchlist.py  start.sh
src/tradeagent/: config.py  database.py  main.py  scheduler.py
tests/: conftest.py  factories.py
tests/integration/: test_api_integration.py  test_pipeline_integration.py
tests/unit/: test_adapters.py  test_backtest_route.py  test_backtest_service.py  test_decisions_route.py  test_health.py  test_llm_adapter.py  test_memory.py  test_mock_adapters.py  test_mock_broker.py  test_models.py  test_news_adapter.py  test_pipeline.py  test_pipeline_route.py  test_portfolio_routes.py  test_portfolio_snapshot.py  test_report_generator.py  test_repositories.py  test_risk_manager.py  test_scaffold.py  test_screening.py  test_simulated_broker.py  test_technical_analysis.py  test_trades_route.py  test_trading212.py
(+65 files in other folders)
