[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tradeagent"
version = "0.1.0"
description = "Autonomous trading agent with LLM-powered analysis"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
    "ta>=0.11",
    "yfinance>=0.2.36",
    "httpx>=0.27",
    "apscheduler>=3.10",
    "structlog>=24.0",
    "asyncpg>=0.29",
    "psycopg2-binary>=2.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "factory-boy>=3.3",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
